--- a/src/ProjectService/appsettings.Development.json
+++ b/src/ProjectService/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; User Id=postgres; Password=postgres; Database=project_db;"
+    "DefaultConnection": "Server=localhost; Port=5433; User Id=postgres; Password=Lon19ska83; Database=project_db;"
   }
 }
