Added User Id to Project

--- a/src/ProjectService/appsettings.Development.json
+++ b/src/ProjectService/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; Port=5433; User Id=postgres; Password=Lon19ska83; Database=project_db;"
-  }
+  },
+  "IdentityServiceUrl": "http://localhost:5000"
 }
